@@ -11,23 +11,18 @@ import lt.terzer.user.User;
 import javax.swing.*;
 import javax.swing.tree.DefaultMutableTreeNode;
 import javax.swing.tree.DefaultTreeModel;
-import javax.swing.tree.TreePath;
 import java.awt.*;
 import java.awt.event.ActionEvent;
-import java.awt.event.MouseAdapter;
-import java.awt.event.MouseEvent;
 import java.util.List;
-import java.util.stream.Collectors;
 
-//TODO butu cool isskaidyti sita klase
 public class MainWindow extends JFrame {
     private JTree tree1;
     private JPanel panel1;
-    private JList courseJList;
+    private JList<Course> courseJList;
     private JLabel descriptionField;
     private JPanel coursePanel;
     private JButton enrollButton;
-    private User user;
+    private transient User user;
 
     public MainWindow(User u) {
         super("Program");
@@ -38,7 +33,7 @@ public class MainWindow extends JFrame {
         JMenuBar menuBar = createMenuBar();
         setJMenuBar(menuBar);
         setLocationRelativeTo(null);
-        setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
+        setDefaultCloseOperation(EXIT_ON_CLOSE);
         setVisible(true);
 
         tree1.setVisible(false);
@@ -53,316 +48,19 @@ public class MainWindow extends JFrame {
         courseJList.setModel(model);
         tree1.setCellRenderer(new FileTreeCellRenderer());
 
-
-        enrollButton.addActionListener(e -> {
-            if (courseJList.getSelectedValue() != null) {
-                Course course = ((Course) courseJList.getSelectedValue());
-                user.addAccessibleCourse(course.getId());
-                MainApplication.getUserDatabase().save(user);
-                enrollButton.setVisible(false);
-                tree1.setVisible(true);
-                tree1.setModel(createNodes(course));
-            }
-        });
-
-        courseJList.addListSelectionListener(e -> {
-            if (courseJList.getSelectedValue() != null) {
-                coursePanel.setVisible(true);
-                Course course = ((Course) courseJList.getSelectedValue());
-                descriptionField.setText(course.getDescription());
-                if (user.isAdmin() || user.getAccessibleCourses().contains(course.getId()) || user.getEditableCourses().contains(course.getId()) || course.getOwnerId() == user.getId()) {
-                    tree1.setVisible(true);
-                    enrollButton.setVisible(false);
-                    tree1.setModel(createNodes(course));
-                } else {
-                    enrollButton.setVisible(true);
-                    tree1.setVisible(false);
-                }
-            } else {
-                coursePanel.setVisible(false);
-                tree1.setModel(null);
-                descriptionField.setText(null);
-            }
-        });
+        enrollButton.addActionListener(new EnrollAction(this, user, courseJList, enrollButton, tree1));
+        courseJList.addListSelectionListener(new CourseListSelectionListener(this, user, courseJList, enrollButton, tree1, coursePanel, descriptionField));
 
         tree1.setRootVisible(false);
-        tree1.addMouseListener(new MouseAdapter() {
-            @Override
-            public void mouseClicked(MouseEvent e) {
-                super.mouseClicked(e);
-                if (SwingUtilities.isRightMouseButton(e)) {
-                    TreePath path = tree1.getPathForLocation(e.getX(), e.getY());
-                    Course course = (Course) courseJList.getSelectedValue();
-                    if (!user.getEditableCourses().contains(course.getId()) && !user.isAdmin()) {
-                        return;
-                    }
+        tree1.addMouseListener(new TreeMouseAdapter(this, tree1, courseJList, user));
 
-                    JPopupMenu menu = new JPopupMenu();
-                    JMenuItem folderCreate = new JMenuItem("Add folder...");
-                    JMenuItem fileCreate = new JMenuItem("Add file...");
-                    JMenuItem delete = new JMenuItem("Delete");
-                    JMenuItem information = new JMenuItem("Info");
-                    folderCreate.addActionListener(e1 -> {
-                        String name = JOptionPane.showInputDialog("Write name of a folder:");
-                        if (name == null)
-                            return;
-                        Folder folder;
-                        DefaultMutableTreeNode root;
-                        if (path == null) {
-                            folder = new Folder(name);
-                            MainApplication.getFileDatabase().save(folder);
-                            course.addFileId(folder.getId());
-                            root = (DefaultMutableTreeNode) tree1.getModel().getRoot();
-                        } else {
-                            folder = (Folder) ((DefaultMutableTreeNode) path.getLastPathComponent()).getUserObject();
-                            Folder nf = new Folder(name);
-                            MainApplication.getFileDatabase().save(nf);
-                            folder.addFile(nf);
-                            MainApplication.getFileDatabase().save(folder);
-                            root = (DefaultMutableTreeNode) path.getLastPathComponent();
-                            folder = nf;
-                        }
-                        DefaultTreeModel model = ((DefaultTreeModel) tree1.getModel());
-                        MainApplication.getCourseDatabase().save(course);
-                        DefaultMutableTreeNode node = new DefaultMutableTreeNode(folder);
-                        root.add(node);
-                        tree1.expandPath(new TreePath(root));
-                        model.nodesWereInserted(root, new int[]{model.getIndexOfChild(root, node)});
-                    });
-                    fileCreate.addActionListener(e1 -> {
-                        String name = JOptionPane.showInputDialog("Write name of a file:");
-                        if (name == null)
-                            return;
-                        File file;
-                        DefaultMutableTreeNode root;
-                        if (path == null) {
-                            file = new File(name);
-                            MainApplication.getFileDatabase().save(file);
-                            course.addFileId(file.getId());
-                            root = (DefaultMutableTreeNode) tree1.getModel().getRoot();
-                        } else {
-                            Folder folder = (Folder) ((DefaultMutableTreeNode) path.getLastPathComponent()).getUserObject();
-                            File nf = new File(name);
-                            MainApplication.getFileDatabase().save(nf);
-                            folder.addFile(nf);
-                            MainApplication.getFileDatabase().save(folder);
-                            file = nf;
-                            root = (DefaultMutableTreeNode) path.getLastPathComponent();
-                        }
-                        DefaultTreeModel model = ((DefaultTreeModel) tree1.getModel());
-                        MainApplication.getCourseDatabase().save(course);
-                        DefaultMutableTreeNode node = new DefaultMutableTreeNode(file);
-                        root.add(node);
-                        tree1.expandPath(new TreePath(root));
-                        model.nodesWereInserted(root, new int[]{model.getIndexOfChild(root, node)});
-                    });
-                    delete.addActionListener(e1 -> {
-                        if (path != null) {
-                            DefaultMutableTreeNode node = (DefaultMutableTreeNode) path.getLastPathComponent();
-                            DefaultMutableTreeNode parent = (DefaultMutableTreeNode) node.getParent();
-                            File file = (File) node.getUserObject();
-                            Folder folder = (Folder) parent.getUserObject();
-                            removeFile(course, folder, file);
-                            DefaultTreeModel model = ((DefaultTreeModel) tree1.getModel());
-                            int[] indices = new int[]{model.getIndexOfChild(parent, node)};
-                            parent.remove(node);
-                            model.nodesWereRemoved(parent, indices, new DefaultMutableTreeNode[]{node});
-                        }
-                    });
-                    information.addActionListener(e1 -> {
-                        if (path != null) {
-                            DefaultMutableTreeNode node = (DefaultMutableTreeNode) path.getLastPathComponent();
-                            File file = (File) node.getUserObject();
-                            new FileInformationWindow(file);
-                        }
-                    });
-                    if (path != null) {
-                        File file = (File) ((DefaultMutableTreeNode) path.getLastPathComponent()).getUserObject();
-                        if (file.isFolder()) {
-                            menu.add(folderCreate);
-                            menu.add(fileCreate);
-                        }
-                        menu.add(delete);
-                        menu.add(information);
-                    } else {
-                        menu.add(folderCreate);
-                        menu.add(fileCreate);
-                    }
-                    menu.show(tree1, e.getX(), e.getY());
-                }
-            }
-        });
-
-        courseJList.setSelectionModel(new DefaultListSelectionModel() {
-            boolean gestureStarted = false;
-
-            @Override
-            public void setSelectionInterval(int index0, int index1) {
-                if (!gestureStarted) {
-                    if (index0 == index1) {
-                        if (isSelectedIndex(index0)) {
-                            removeSelectionInterval(index0, index0);
-                            return;
-                        }
-                    }
-                    super.setSelectionInterval(index0, index1);
-                }
-                gestureStarted = true;
-            }
-
-            @Override
-            public void addSelectionInterval(int index0, int index1) {
-                if (index0 == index1) {
-                    if (isSelectedIndex(index0)) {
-                        removeSelectionInterval(index0, index0);
-                        return;
-                    }
-                    super.addSelectionInterval(index0, index1);
-                }
-            }
-
-            @Override
-            public void setValueIsAdjusting(boolean isAdjusting) {
-                if (!isAdjusting) {
-                    gestureStarted = false;
-                }
-            }
-
-        });
+        courseJList.setSelectionModel(new CourseListSelectionModel());
         courseJList.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
 
-        courseJList.addMouseListener(new MouseAdapter() {
-            public void mousePressed(MouseEvent e) {
-                if (SwingUtilities.isRightMouseButton(e)) {
-                    int index = courseJList.locationToIndex(e.getPoint());
-                    if (index > -1 && courseJList.getCellBounds(index, index).contains(e.getPoint())) {
-                        if (courseJList.getSelectedIndex() != index) {
-                            courseJList.setSelectedIndex(index);
-                            courseJList.setValueIsAdjusting(false);
-                        }
-                    } else {
-                        courseJList.clearSelection();
-                    }
-                    JPopupMenu menu = new JPopupMenu();
-                    if (courseJList.getSelectedValue() == null && (user.isCourseCreator() || user.isAdmin())) {
-                        JMenuItem itemCreate = new JMenuItem("Create course...");
-                        itemCreate.addActionListener(e1 -> {
-                            new CourseCreationWindow(user, () -> {
-                                DefaultListModel<Course> model = new DefaultListModel<>();
-                                List<Course> courses = MainApplication.getCourseDatabase().getAll();
-                                for (Course course : courses) {
-                                    model.addElement(course);
-                                }
-                                courseJList.setModel(model);
-                            });
-                        });
-                        menu.add(itemCreate);
-                        menu.show(courseJList, e.getPoint().x, e.getPoint().y);
-                    } else {
-                        if (courseJList.getSelectedValue() == null)
-                            return;
-                        if (user.getEditableCourses().contains(((Course) courseJList.getSelectedValue()).getId()) || user.isAdmin()) {
-                            JMenuItem itemRemove = new JMenuItem("Remove course");
-                            JMenuItem addModerator = new JMenuItem("Add moderator...");
-                            JMenuItem removeModerator = new JMenuItem("Remove moderator...");
-                            JMenuItem changeDescription = new JMenuItem("Change description...");
-                            JMenuItem addUsers = new JMenuItem("Add users...");
-                            JMenuItem removeUsers = new JMenuItem("Remove users...");
-                            itemRemove.addActionListener(e1 -> {
-                                Course course = (Course) courseJList.getSelectedValue();
-                                MainApplication.getCourseDatabase().remove(course);
-                                MainApplication.getUserDatabase().getAll().forEach(u -> {
-                                    u.removeAccessibleCourse(course.getId());
-                                    u.removeEditableCourse(course.getId());
-                                    MainApplication.getUserDatabase().save(u);
-                                });
-                                removeFiles(MainApplication.getFileDatabase().getByIds(course.getFilesIds()));
-                                DefaultListModel<Course> m = new DefaultListModel<>();
-                                user = MainApplication.getUserDatabase().getById(user.getId());
-                                List<Course> courses1 = MainApplication.getCourseDatabase().getAll();
-                                for (Course c : courses1) {
-                                    m.addElement(c);
-                                }
-                                courseJList.setModel(m);
-                            });
-                            changeDescription.addActionListener(e1 -> {
-                                String desc = JOptionPane.showInputDialog("New description name:");
-                                if (desc != null) {
-                                    Course course = ((Course) courseJList.getSelectedValue());
-                                    course.setDescription(desc);
-                                    MainApplication.getCourseDatabase().save(course);
-                                    descriptionField.setText(course.getDescription());
-                                }
-                            });
-                            addModerator.addActionListener(e1 -> {
-                                List<User> users = MainApplication.getUserDatabase().getAll();
-                                users.removeIf(u -> !u.getAccessibleCourses().contains(((Course) courseJList.getSelectedValue()).getId())
-                                        || u.getEditableCourses().contains(((Course) courseJList.getSelectedValue()).getId())
-                                        || ((Course) courseJList.getSelectedValue()).getOwnerId() == u.getId()
-                                        || u.getId() == user.getId());
-                                new UserSelectWindow(users, users1 -> {
-                                    users1.forEach(u -> u.addEditableCourse(((Course) courseJList.getSelectedValue()).getId()));
-                                    MainApplication.getUserDatabase().save(users1);
-                                });
-                            });
-                            removeModerator.addActionListener(e1 -> {
-                                List<User> users = MainApplication.getUserDatabase().getAll();
-                                users.removeIf(u -> !u.getEditableCourses().contains(((Course) courseJList.getSelectedValue()).getId()) || ((Course) courseJList.getSelectedValue()).getOwnerId() == u.getId() || u.getId() == user.getId());
-                                new UserSelectWindow(users, users1 -> {
-                                    users1.forEach(u -> u.removeEditableCourse(((Course) courseJList.getSelectedValue()).getId()));
-                                    MainApplication.getUserDatabase().save(users1);
-                                });
-                            });
-                            addUsers.addActionListener(e1 -> {
-                                List<User> users = MainApplication.getUserDatabase().getAll();
-                                users.removeIf(u -> u.getAccessibleCourses().contains(((Course) courseJList.getSelectedValue()).getId()) || ((Course) courseJList.getSelectedValue()).getOwnerId() == u.getId() || u.getId() == user.getId());
-                                new UserSelectWindow(users, users1 -> {
-                                    users1.forEach(u -> u.addAccessibleCourse(((Course) courseJList.getSelectedValue()).getId()));
-                                    MainApplication.getUserDatabase().save(users1);
-                                });
-                            });
-                            removeUsers.addActionListener(e1 -> {
-                                List<User> users = MainApplication.getUserDatabase().getAll();
-                                users.removeIf(u -> !u.getAccessibleCourses().contains(((Course) courseJList.getSelectedValue()).getId()) || ((Course) courseJList.getSelectedValue()).getOwnerId() == u.getId() || u.getId() == user.getId());
-                                new UserSelectWindow(users, users1 -> {
-                                    users1.forEach(u -> {
-                                        u.removeAccessibleCourse(((Course) courseJList.getSelectedValue()).getId());
-                                        u.removeEditableCourse(((Course) courseJList.getSelectedValue()).getId());
-                                    });
-                                    MainApplication.getUserDatabase().save(users1);
-                                });
-                            });
-                            if (user.isAdmin() || ((Course) courseJList.getSelectedValue()).getOwnerId() == user.getId() || user.getEditableCourses().contains(((Course) courseJList.getSelectedValue()).getId())) {
-                                menu.add(addUsers);
-                                menu.add(removeUsers);
-                                menu.add(changeDescription);
-                            }
-                            if (user.isAdmin() || ((Course) courseJList.getSelectedValue()).getOwnerId() == user.getId()) {
-                                menu.add(addModerator);
-                                menu.add(removeModerator);
-                                menu.add(itemRemove);
-                            }
-                            menu.show(courseJList, e.getPoint().x, e.getPoint().y);
-                        } else {
-                            Course course = (Course) courseJList.getSelectedValue();
-                            if (user.getAccessibleCourses().contains(course.getId()) && course.getOwnerId() != user.getId()) {
-                                JMenuItem itemLeave = new JMenuItem("Leave course");
-                                itemLeave.addActionListener(e1 -> {
-                                    user.removeAccessibleCourse(course.getId());
-                                    MainApplication.getUserDatabase().save(user);
-                                    courseJList.setSelectedValue(null, false);
-                                });
-                                menu.add(itemLeave);
-                                menu.show(courseJList, e.getPoint().x, e.getPoint().y);
-                            }
-                        }
-                    }
-                }
-            }
-        });
+        courseJList.addMouseListener(new CourseMouseAdapter(this, courseJList, descriptionField, user));
     }
 
-    private void removeFiles(List<File> files) {
+    public void removeFiles(List<File> files) {
         files.forEach(f -> {
             if (f.isFolder()) {
                 removeFiles(MainApplication.getFileDatabase().getByIds(((Folder) f).getFiles()));
@@ -372,7 +70,7 @@ public class MainWindow extends JFrame {
 
     }
 
-    private void removeFile(Course course, Folder parent, File file) {
+    public void removeFile(Course course, Folder parent, File file) {
         if (file.isFolder()) {
             for (File f : MainApplication.getFileDatabase().getByIds(((Folder) file).getFiles())) {
                 removeFile(course, (Folder) file, f);
@@ -386,7 +84,7 @@ public class MainWindow extends JFrame {
         MainApplication.getFileDatabase().remove(file);
     }
 
-    private DefaultTreeModel createNodes(Course course) {
+    public DefaultTreeModel createNodes(Course course) {
         List<File> files = MainApplication.getFileDatabase().getByIds(course.getFilesIds());
         DefaultMutableTreeNode root = new DefaultMutableTreeNode();
         for (File file : files) {
@@ -404,6 +102,10 @@ public class MainWindow extends JFrame {
         root.add(node);
     }
 
+    public void setUser(User user) {
+        this.user = user;
+    }
+
     protected JMenuBar createMenuBar() {
         final JMenuBar menuBar = new JMenuBar();
 
@@ -415,7 +117,7 @@ public class MainWindow extends JFrame {
                 public void actionPerformed(ActionEvent e) {
                     List<User> users = MainApplication.getUserDatabase().getAll().stream()
                             .filter(u -> !u.isCourseCreator() && !u.isAdmin())
-                            .collect(Collectors.toList());
+                            .toList();
                     new UserSelectWindow(users, selectedUsers -> {
                         selectedUsers.forEach(u -> u.setCourseCreator(true));
                         MainApplication.getUserDatabase().save(selectedUsers);
@@ -428,7 +130,7 @@ public class MainWindow extends JFrame {
                 public void actionPerformed(ActionEvent e) {
                     List<User> users = MainApplication.getUserDatabase().getAll().stream()
                             .filter(u -> u.isCourseCreator() && !u.isAdmin())
-                            .collect(Collectors.toList());
+                            .toList();
                     new UserSelectWindow(users, selectedUsers -> {
                         selectedUsers.forEach(u -> u.setCourseCreator(false));
                         MainApplication.getUserDatabase().save(selectedUsers);
@@ -494,7 +196,7 @@ public class MainWindow extends JFrame {
     private void $$$setupUI$$$() {
         panel1 = new JPanel();
         panel1.setLayout(new GridLayoutManager(1, 2, new Insets(0, 0, 0, 0), -1, -1));
-        courseJList = new JList();
+        courseJList = new JList<>();
         courseJList.setSelectionMode(0);
         panel1.add(courseJList, new GridConstraints(0, 0, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_BOTH, GridConstraints.SIZEPOLICY_CAN_GROW, GridConstraints.SIZEPOLICY_WANT_GROW, null, new Dimension(50, 50), null, 0, false));
         coursePanel = new JPanel();
@@ -528,5 +230,4 @@ public class MainWindow extends JFrame {
     public JComponent $$$getRootComponent$$$() {
         return panel1;
     }
-
 }
